--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button id="save-button" onclick="save()">Save</button>
     </div>
 
- <div class="previous"><span class="prev-saves">Previous Saves:</span> <span id="result">0</span>
+ <div class="previous"><span class="prev-saves">Records: </span> <span id="result">0</span>
 </div>
 
 <script src="index.js"></script>
