--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Passenger counter app by Anaturuchi</title>
+    <title>Items counter app by AnatuGreen</title>
    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
 <p id="welcome-el">hi</p>
 
-    <h1>Welcome To The Passenger Counter App </h1>
+    <h1>Happy Counting App </h1>
 
     <div class="counter-box"> 
 
-        <h2>Passengers Entered</h2>
+        <h2>Counting</h2>
         <p id="count-num">0</p>
 
 
